# Dai-Makai-Mura

./: .gitignore  CMakeLists.txt  Dai Makai Mura.sln  Dai Makai Mura.vcxproj  Dai Makai Mura.vcxproj.filters
CPP-SFMLTemplate/: CPP-SFMLTemplate.vcxproj  CPP-SFMLTemplate.vcxproj.filters  EnemyBullet.cpp  EnemyBullet.h  EnemyCharacter.cpp  MainCharacter.cpp  MainCharacter.h  main.cpp
CPP-SFMLTemplate/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
CPP-SFMLTemplate/game/src/: main.cpp
CPP-SFMLTemplate/game/src/cpp/player/: EnemyBullet.cpp  EnemyCharacter.cpp
CPP-SFMLTemplate/game/src/header/: App.h  Utils.h
CPP-SFMLTemplate/game/src/header/game/: GameMap.h  ItemModel.h
CPP-SFMLTemplate/game/src/header/npc/: NPCharacter.h
CPP-SFMLTemplate/game/src/header/player/: EnemyBullet.h  EnemyCharacter.h  MainCharacter.h  MainCharacterBullet.h
CPP-SFMLTemplate/game/src/header/screen/: EndScreen.h  GameScreen.h  HowToPlayScreen.h  LvlChooseScreen.h
CPP-SFMLTemplate/game/src/res/file/: howTo.txt
Debug/: CL.read.1.tlog  CL.write.1.tlog  CPP-SFMLTemplate.ilk  Ghouls n Ghosts.ilk  cl.command.1.tlog  vc110.idb
Documentation/: Teodor_Grigor_19412013_CSY1024_19-20.docx  ~$odor_Grigor_19412013_CSY1024_19-20.docx  ~WRL0684.tmp
SFML/cmake/Modules/: FindSFML.cmake
SFML/doc/: sfml.chm
Solution/CPP-SFMLTemplate/Debug/: CL.read.1.tlog  CL.write.1.tlog  Ghouls n Ghosts.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Solution/Debug/: Ghouls n Ghosts.ilk
app/src/main/: main.cpp
app/src/main/cpp/: App.cpp
app/src/main/cpp/screen/: GameMenuScreen.cpp  LvlChooseScreen.cpp  SplashScreen.cpp
app/src/main/header/: App.h  Utils.h
app/src/main/header/screen/: GameMenuScreen.h  LvlChooseScreen.h  SplashScreen.h
cmake/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/main/: main.cpp
src/main/cpp/: App.cpp  Utils.cpp  main.cpp
src/main/cpp/screen/: GameMenuScreen.cpp  SplashScreen.cpp
src/main/cpp/screens/: SplashScreen.cpp
src/main/header/: App.h  Utils.h
src/main/header/screen/: GameMenuScreen.h  SplashScreen.h
src/main/header/screens/: SplashScreen.h
